--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css">
     <title>About</title>
 </head>
 <body>
-    <h1>About Me</h1>
-    <button><a href="project.html">Project</a></button>
+    <div class="about">
+        <div class="test">
+            <h1>Hi! I'am <br> Mariusz Malankiewicz</h1>
+            <p>Programowanie stanowi moją pasję, którą aktywnie rozwijam od ponad roku. Pragnę zdobyć doświadczenie zawodowe, dlatego szukam swojej pierwszej pracy na stanowisku programista. Chce się udoskonalać w tym kierunku oraz poszerzać zakres swoich umiejętności. Jestem osobą chcącą się realizować i gotową podejmować trudne wyzwania.</p>
+        </div>
+        <img src="imgs/img2.png" alt="robot_icon">
+
+        <div class="contact">
+            <h2>Contact</h2>
+            <p>Tel: 796900446</p>
+            <p>email: m2ario123@wp.pl</p>
+        </div>
+    </div>
+
+    <div class="skills">
+        <h2>My Skills</h2>
+        <p>HTML, CSS, SASS, BOOTSTRAP, JS, PHP, MSQLI, GIT, GITHUB</p>
+        <div class="project">
+        <button><a href="project.html">Project</a></button>
+        </div>
+    </div>
 </body>
 </html>
