--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
     <title>About</title>
 </head>
 <body>
-    <div class="about">
-        <div class="test">
+    <div class="wrapper-about">
+        <div class="title">
             <h1>Hi! I'am <br> Mariusz Malankiewicz</h1>
-            <p>Programowanie stanowi moją pasję, którą aktywnie rozwijam od ponad roku. Pragnę zdobyć doświadczenie zawodowe, dlatego szukam swojej pierwszej pracy na stanowisku programista. Chce się udoskonalać w tym kierunku oraz poszerzać zakres swoich umiejętności. Jestem osobą chcącą się realizować i gotową podejmować trudne wyzwania.</p>
         </div>
-        <img src="imgs/img2.png" alt="robot_icon">
-
         <div class="contact">
             <h2>Contact</h2>
             <p>Tel: 796900446</p>
             <p>email: m2ario123@wp.pl</p>
         </div>
+        <div class="about">
+            <p>Programowanie stanowi moją pasję, którą aktywnie rozwijam od ponad roku. Pragnę zdobyć doświadczenie zawodowe, dlatego szukam swojej pierwszej pracy na stanowisku programista. Chce się udoskonalać w tym kierunku oraz poszerzać zakres swoich umiejętności. Jestem osobą chcącą się realizować i gotową podejmować trudne wyzwania.</p>
+        </div>
+        <div class="imgs">
+            <img src="imgs/img4.png" alt="robot_icon">
+        </div>
+        <div class="test"></div>
     </div>
 
     <div class="skills">
