--- a/index.html
+++ b/index.html
@@ -23,15 +23,29 @@
         <div class="imgs">
             <img src="imgs/img4.png" alt="robot_icon">
         </div>
-        <div class="test"></div>
     </div>
 
     <div class="skills">
-        <h2>My Skills</h2>
-        <p>HTML, CSS, SASS, BOOTSTRAP, JS, PHP, MSQLI, GIT, GITHUB</p>
-        <div class="project">
-        <button><a href="project.html">Project</a></button>
+        <div class="title-skills">
+            <h2>My Skills</h2>
         </div>
+        <div class="name-technology">
+            <p>HTML</p>
+            <span></span>
+            <span></span>
+            <span></span>
+        <div class="name-technology">
+            <p>CSS</p>
+            <span></span>
+            <span></span>
+            <span></span>    
+        </div>
+        <!-- <div class="project">
+            <button><a href="project.html">Project</a></button>
+        </div> -->
     </div>
+
+    
+            <!-- <p>HTML, CSS, SASS, BOOTSTRAP, JS, PHP, MSQLI, GIT, GITHUB</p> -->
 </body>
 </html>
