--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style/style.css">
     <title>About</title>
 </head>
@@ -12,12 +13,11 @@
         <div class="title">
             <h1>Hi! I'am <br> Mariusz Malankiewicz</h1>
         </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,160L480,128L960,192L1440,32L1440,0L960,0L480,0L0,0Z"></path></svg>
         <div class="about">
             <p>Programowanie stanowi moją pasję, którą aktywnie rozwijam od ponad roku. Pragnę zdobyć doświadczenie zawodowe, dlatego szukam swojej pierwszej pracy na stanowisku programista. Chce się udoskonalać w tym kierunku oraz poszerzać zakres swoich umiejętności. Jestem osobą chcącą się realizować i gotową podejmować trudne wyzwania.</p>
         </div>
-        <!-- <div class="imgs"> -->
-            <!-- <img src="imgs/img4.png" alt="robot_icon"> -->
-        <!-- </div> -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,160L480,128L960,192L1440,32L1440,320L960,320L480,320L0,320Z"></path></svg>
         <div class="contact">
             <h2>Contact</h2>
             <p>Tel: 796900446</p>
@@ -27,19 +27,30 @@
 
     <div class="skills">
         <div class="title-skills">
-            <h2>My Skills</h2>
+            <h1>My Skills</h1>
         </div>
-        <div class="name-technology">
-            <p>HTML</p>
-            <span></span>
-            <span></span>
-            <span></span>
-        <div class="name-technology">
-            <p>CSS</p>
-            <span></span>
-            <span></span>
-            <span></span>    
+
+        <div class="technology">
+            <div>
+                <p>Trainee</p>
+            </div>
+            <i class="fas fa-chevron-right"></i>
+            <div>
+                <p>Junior</p>
+            </div>
+            <i class="fas fa-chevron-right"></i>
+            <div>
+                <p>Midlle</p>
+            </div>
+            <i class="fas fa-chevron-right"></i>
+            <div>
+                <p>Senior</p>
+            </div>
         </div>
+
+
+
+
         <!-- <div class="project">
             <button><a href="project.html">Project</a></button>
         </div> -->
