--- a/index.html
+++ b/index.html
@@ -33,20 +33,15 @@
         <div class="technology">
             <div>
                 <p>Trainee</p>
-            </div>
-            <i class="fas fa-chevron-right"></i>
-            <div>
+                <i class="fas fa-chevron-right"></i>
                 <p>Junior</p>
-            </div>
-            <i class="fas fa-chevron-right"></i>
-            <div>
-                <p>Midlle</p>
-            </div>
-            <i class="fas fa-chevron-right"></i>
-            <div>
+                <i class="fas fa-chevron-right"></i>
+                <p>Midle</p>
+                <i class="fas fa-chevron-right"></i>
                 <p>Senior</p>
             </div>
         </div>
+
 
 
 
