--- a/index.html
+++ b/index.html
@@ -26,24 +26,37 @@
     </div>
 
     <div class="skills">
-        <div class="title-skills">
+        <div class="title_skills">
             <h1>My Skills</h1>
         </div>
-
         <div class="technology">
             <div>
-                <p>Trainee</p>
-                <i class="fas fa-chevron-right"></i>
-                <p>Junior</p>
-                <i class="fas fa-chevron-right"></i>
-                <p>Midle</p>
-                <i class="fas fa-chevron-right"></i>
-                <p>Senior</p>
+                <p>Html</p>
+                <p>Middle</p>
             </div>
+            <div><span></span></div>
         </div>
-
-
-
+        <div class="technology">
+            <div>
+                <p>Css</p>
+                <p>Middle</p>
+            </div>
+            <div><span></span></div>
+        </div>
+        <div class="technology">
+            <div>
+                <p>Sass</p>
+                <p>Middle</p>
+            </div>
+            <div><span></span></div>
+        </div>
+        <div class="technology">
+            <div>
+                <p>Java Script</p>
+                <p>Junior</p>
+            </div>
+            <div><span></span></div>
+        </div>
 
 
         <!-- <div class="project">
