--- a/index.html
+++ b/index.html
@@ -34,37 +34,75 @@
                 <p>Html</p>
                 <p>Middle</p>
             </div>
-            <div><span></span></div>
+            <div><span class="mid"></span></div>
         </div>
         <div class="technology">
             <div>
                 <p>Css</p>
                 <p>Middle</p>
             </div>
-            <div><span></span></div>
+            <div><span class="mid"></span></div>
         </div>
         <div class="technology">
             <div>
                 <p>Sass</p>
                 <p>Middle</p>
             </div>
-            <div><span></span></div>
+            <div><span class="mid"></span></div>
+        </div>
+        <div class="technology">
+            <div>
+                <p>Bootstrap</p>
+                <p>Junior</p>
+            </div>
+            <div><span class="junior"></span></div>
         </div>
         <div class="technology">
             <div>
                 <p>Java Script</p>
                 <p>Junior</p>
             </div>
-            <div><span></span></div>
+            <div><span class="junior"></span></div>
         </div>
-
-
-        <!-- <div class="project">
+        <div class="technology">
+            <div>
+                <p>Php</p>
+                <p>Junior</p>
+            </div>
+            <div><span class="junior"></span></div>
+        </div>
+        <div class="technology">
+            <div>
+                <p>Msqli</p>
+                <p>Junior</p>
+            </div>
+            <div><span class="junior"></span></div>
+        </div>
+        <div class="technology">
+            <div>
+                <p>Git</p>
+                <p>Junior</p>
+            </div>
+            <div><span class="junior"></span></div>
+        </div>
+        <div class="technology">
+            <div>
+                <p>Github</p>
+                <p>Junior</p>
+            </div>
+            <div><span class="junior"></span></div>
+        </div>
+        <div class="technology">
+            <div>
+                <p>Symfony</p>
+                <p>Traine</p>
+            </div>
+            <div><span class="trainee"></span></div>
+        </div>
+        <div class="project">
             <button><a href="project.html">Project</a></button>
-        </div> -->
+        </div>
     </div>
 
-    
-            <!-- <p>HTML, CSS, SASS, BOOTSTRAP, JS, PHP, MSQLI, GIT, GITHUB</p> -->
 </body>
 </html>
