--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <title>About</title>
 </head>
 <body>
+    <div class="wrapper-about">
+        <div class="title">
+            <h1>Hi! I'am <br> Mariusz Malankiewicz</h1>
+        </div>
+        <div class="up">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,160L480,128L960,192L1440,32L1440,0L960,0L480,0L0,0Z"></path></svg>
+        </div>
+        <div class="about">
+            <p>Programowanie stanowi moją pasję, którą aktywnie rozwijam od ponad roku. Pragnę zdobyć doświadczenie zawodowe, dlatego szukam swojej pierwszej pracy na stanowisku programista. Chce się udoskonalać w tym kierunku oraz poszerzać zakres swoich umiejętności. Jestem osobą chcącą się realizować i gotową podejmować trudne wyzwania.</p>
+        </div>
+        <!-- <div class="down">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,160L480,128L960,192L1440,32L1440,320L960,320L480,320L0,320Z"></path></svg>
+        </div> -->
+
+    </div>
     <div class="skills">
         <div class="title_skills">
             <h1>My Skills</h1>
@@ -76,32 +91,15 @@
             </div>
             <div><span class="junior"></span></div>
         </div>
-        <div class="technology">
-            <div>
-                <p>Symfony</p>
-                <p>Traine</p>
-            </div>
-            <div><span class="trainee"></span></div>
-        </div>
-        <div class="project">
-            <button><a href="project.html">Project</a></button>
+        <div class="certificates">
+            <h2>Certificates</h2>
+            <p>Web developer od podstaw w 15 dni</p>
+            <p>Front-end zaawansowany w 15 dni</p>
+            <p>Programowanie w JavaScript</p>
         </div>
     </div>
-    <div class="wrapper-about">
-        <div class="title">
-            <h1>Hi! I'am <br> Mariusz Malankiewicz</h1>
-        </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,160L480,128L960,192L1440,32L1440,0L960,0L480,0L0,0Z"></path></svg>
-        <div class="about">
-            <p>Programowanie stanowi moją pasję, którą aktywnie rozwijam od ponad roku. Pragnę zdobyć doświadczenie zawodowe, dlatego szukam swojej pierwszej pracy na stanowisku programista. Chce się udoskonalać w tym kierunku oraz poszerzać zakres swoich umiejętności. Jestem osobą chcącą się realizować i gotową podejmować trudne wyzwania.</p>
-        </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,160L480,128L960,192L1440,32L1440,320L960,320L480,320L0,320Z"></path></svg>
-        <div class="contact">
-            <h1>Contact</h1>
-            <p>Tel: 796900446</p>
-            <p>email: m2ario123@wp.pl</p>
-        </div>
-    </div>
+
+
 
 </body>
 </html>
