--- a/index.html
+++ b/index.html
@@ -6,28 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style/style.css">
-    <title>About</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <div class="wrapper-about">
-        <div class="title">
-            <h1>Hi! I'am <br> Mariusz Malankiewicz</h1>
-        </div>
-        <div class="up">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,160L480,128L960,192L1440,32L1440,0L960,0L480,0L0,0Z"></path></svg>
-        </div>
-        <div class="about">
+        <h1 class="name">Hi! I'am <br> Mariusz Malankiewicz</h1>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,160L480,128L960,192L1440,32L1440,0L960,0L480,0L0,0Z"></path></svg>
+        <div class="about_content">
+            <h2>About Me</h2>
             <p>Programowanie stanowi moją pasję, którą aktywnie rozwijam od ponad roku. Pragnę zdobyć doświadczenie zawodowe, dlatego szukam swojej pierwszej pracy na stanowisku programista. Chce się udoskonalać w tym kierunku oraz poszerzać zakres swoich umiejętności. Jestem osobą chcącą się realizować i gotową podejmować trudne wyzwania.</p>
         </div>
-        <!-- <div class="down">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,160L480,128L960,192L1440,32L1440,320L960,320L480,320L0,320Z"></path></svg>
-        </div> -->
-
     </div>
-    <div class="skills">
-        <div class="title_skills">
-            <h1>My Skills</h1>
-        </div>
+    <div class="wrapper_skills">
+        <h1>My Skills</h1>
         <div class="technology">
             <div>
                 <p>Html</p>
@@ -98,7 +89,21 @@
             <p>Programowanie w JavaScript</p>
         </div>
     </div>
-
+    <div class="wrapper_project">
+        <h1>Project</h1>
+        <div class="project">
+            <img src="imgs/todolist.png" alt="todolist">
+            <img src="imgs/login_accont.png" alt="login accont">
+            <img src="imgs/stopper.png" alt="stoper">
+            <img src="imgs/costumer_reviews.png" alt="costumer_reviews">
+            <img src="imgs/modal.png" alt="modal">
+            <img src="imgs/faq_page.png" alt="faq_page">
+            <img src="imgs/menu.png" alt="menu">
+            <img src="imgs/color_fliper.png" alt="color_fliper">
+            <img src="imgs/counter.png" alt="counter">
+            <img src="imgs/calculator.png" alt="calculator">
+        </div>
+    </div>
 
 
 </body>
