--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <div class="wrapper-about">
-        <h1 class="name">Hi! I'am <br> Mariusz Malankiewicz</h1>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,160L480,128L960,192L1440,32L1440,0L960,0L480,0L0,0Z"></path></svg>
-        <div class="about_content">
-            <h2>About Me</h2>
-            <p>Programowanie stanowi moją pasję, którą aktywnie rozwijam od ponad roku. Pragnę zdobyć doświadczenie zawodowe, dlatego szukam swojej pierwszej pracy na stanowisku programista. Chce się udoskonalać w tym kierunku oraz poszerzać zakres swoich umiejętności. Jestem osobą chcącą się realizować i gotową podejmować trudne wyzwania.</p>
-        </div>
+    <h1 class="name">Hi! I'am <br> Mariusz Malankiewicz</h1>
+    <svg class="up" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,160L480,128L960,192L1440,32L1440,0L960,0L480,0L0,0Z"></path></svg>
+    <i class="fa-solid fa-angle-down"></i>
+    <div class="about_content">
+        <h2>About Me</h2>
+        <p>Programowanie stanowi moją pasję, którą aktywnie rozwijam od ponad roku. Pragnę zdobyć doświadczenie zawodowe, dlatego szukam swojej pierwszej pracy na stanowisku programista. Chce się udoskonalać w tym kierunku oraz poszerzać zakres swoich umiejętności. Jestem osobą chcącą się realizować i gotową podejmować trudne wyzwania.</p>
     </div>
-    <div class="wrapper_skills">
-        <h1>My Skills</h1>
+    <div class="programming_language">
+        <h2>Programming Language</h2>
         <div class="technology">
             <div>
                 <p>Html</p>
@@ -68,27 +67,29 @@
             </div>
             <div><span class="junior"></span></div>
         </div>
-        <div class="technology">
-            <div>
-                <p>Git</p>
-                <p>Junior</p>
-            </div>
-            <div><span class="junior"></span></div>
-        </div>
-        <div class="technology">
-            <div>
-                <p>Github</p>
-                <p>Junior</p>
-            </div>
-            <div><span class="junior"></span></div>
-        </div>
-        <div class="certificates">
-            <h2>Certificates</h2>
-            <p>Web developer od podstaw w 15 dni</p>
-            <p>Front-end zaawansowany w 15 dni</p>
-            <p>Programowanie w JavaScript</p>
-        </div>
     </div>
+    <div class="tools">
+        <h2>Tools</h2>
+        <p>Visual Studio Code</p>
+        <p>Git</p>
+        <p>Github</p>
+    </div>
+    <div class="system">
+        <h2>System</h2>
+        <p>Windows</p>
+    </div>
+    <div class="language">
+        <h2>Language</h2>
+        <p>Polish</p>
+        <p>English</p>
+    </div>
+    <div class="certificates">
+        <h2>Certificates</h2>
+        <p>Web developer od podstaw w 15 dni</p>
+        <p>Front-end zaawansowany w 15 dni</p>
+        <p>Programowanie w JavaScript</p>
+    </div>
+    <svg class="down" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,96L288,128L576,128L864,256L1152,128L1440,96L1440,320L1152,320L864,320L576,320L288,320L0,320Z"></path></svg>
     <div class="wrapper_project">
         <h1>Project</h1>
         <div class="project">
@@ -104,7 +105,21 @@
             <img src="imgs/calculator.png" alt="calculator">
         </div>
     </div>
-
-
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,160L288,224L576,320L864,160L1152,224L1440,96L1440,0L1152,0L864,0L576,0L288,0L0,0Z"></path></svg>
+    <div class="contact">
+        <h2>Contact</h2>
+        <p>Email: m2ario123@wp.pl</p>
+        <i class="fa-solid fa-envelope"></i>
+        <p>Location: Poland</p>
+        <i class="fa-solid fa-location-dot"></i>
+        <p>GitHub</p>
+        <i class="fa-brands fa-github"></i>
+        <p>LinkedIn</p>
+        <i class="fa-brands fa-linkedin"></i>
+    </div>
+    <i class="fa-solid fa-briefcase"></i>
+    <i class="fa-solid fa-house"></i>
+    <i class="fa-solid fa-address-card"></i>
+    <i class="fa-solid fa-graduation-cap"></i>
 </body>
 </html>
