--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <nav>
+        <i class="fa-solid fa-bars"></i>
         <ul>
             <i class="fa-solid fa-house"></i>
             <a href="#home">Home</a>
@@ -30,20 +31,13 @@
             <i class="fa-solid fa-address-card"></i>
             <a href="#contact">Contact</a>
         </ul>
-            
-            
-
-
-
-
-
     </nav>
     <h1 id="home" class="name">Hi! I'am <br> Mariusz Malankiewicz</h1>
     <svg class="up" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,160L480,128L960,192L1440,32L1440,0L960,0L480,0L0,0Z"></path></svg>
     <i class="fa-solid fa-angle-down"></i>
     <div class="about_content">
         <h2 id="about">About Me</h2>
-        <p>Programowanie stanowi moją pasję, którą aktywnie rozwijam od ponad roku. Pragnę zdobyć doświadczenie zawodowe, dlatego szukam swojej pierwszej pracy na stanowisku programista. Chce się udoskonalać w tym kierunku oraz poszerzać zakres swoich umiejętności. Jestem osobą chcącą się realizować i gotową podejmować trudne wyzwania.</p>
+        <p>Programming is my passion, which I have been promoting for over a year. I want to gain experience, professional development of my first job as a programmer. He wants to improve in this direction and expand the range of his skills. I am a person who wants to apply for a place in the position.</p>
     </div>
     <div class="programming_language">
         <h2 id="skills">Programming Language</h2>
@@ -131,9 +125,9 @@
             </div>
         </div>
         <div class="project">
-            <img src="imgs/login_accont.png" alt="todolist">
+            <img src="imgs/login_accont.png" alt="account system">
             <div class="info">
-                <h3>Login System</h3>
+                <h3>Account System</h3>
                 <p>Html, Css, Php, Mysqli</p>
                 <button>Open</button>
                 <button>GitHub</button>
@@ -165,6 +159,6 @@
             <li>LinkedIn</li>
         </ul>
     </div>
-
+    <script src="app.js"></script>
 </body>
 </html>
