--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <div class="open_menu">
+        <i class="fa-solid fa-arrow-left"></i>
+        <p>Menu</p>
+    </div>
     <nav>
         <i class="fa-solid fa-bars"></i>
         <ul>
