--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 <body>
     <div class="open_menu">
         <i class="fa-solid fa-arrow-left"></i>
-        <p>Menu</p>
+        <p>Open</p>
     </div>
     <nav>
-        <i class="fa-solid fa-bars"></i>
+        <div class="close_menu">
+            <p>Close</p>
+            <i class="fa-solid fa-arrow-right"></i>
+        </div>
         <ul>
             <i class="fa-solid fa-house"></i>
             <a href="#home">Home</a>
