--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
     </nav>
     <h1 id="home" class="name">Hi! I'am <br> Mariusz Malankiewicz</h1>
     <svg class="up" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,160L480,128L960,192L1440,32L1440,0L960,0L480,0L0,0Z"></path></svg>
-    <i class="fa-solid fa-angle-down"></i>
     <div class="about_content">
         <h2 id="about">About Me</h2>
         <p>Programming is my passion, which I have been promoting for over a year. I want to gain experience, professional development of my first job as a programmer. He wants to improve in this direction and expand the range of his skills. I am a person who wants to apply for a place in the position.</p>
@@ -115,9 +114,9 @@
     </div>
     <div class="certificates">
         <h2>Certificates</h2>
-        <p>Web developer od podstaw w 15 dni</p>
-        <p>Front-end zaawansowany w 15 dni</p>
-        <p>Programowanie w JavaScript</p>
+        <p>Web developer from scratch in 15 days</p>
+        <p>Front-end advanced in 15 days</p>
+        <p>Programming in JavaScript</p>
     </div>
     <svg class="down" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,96L288,128L576,128L864,256L1152,128L1440,96L1440,320L1152,320L864,320L576,320L288,320L0,320Z"></path></svg>
     <div class="wrapper_project">
