--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
             <div class="info">
                 <h3>To Do List</h3>
                 <p>Html, Css, Js</p>
-                <button>Open</button>
-                <button>GitHub</button>
+                <button><a href="https://mariuszmalankiewicz.github.io/To-Do-List/">Open</a></button>
+                <button><a href="https://github.com/MariuszMalankiewicz/To-Do-List">Github</a></button>
             </div>
         </div>
         <div class="project">
@@ -135,22 +135,17 @@
             <div class="info">
                 <h3>Account System</h3>
                 <p>Html, Css, Php, Mysqli</p>
-                <button>Open</button>
-                <button>GitHub</button>
+                <button><a href="https://github.com/MariuszMalankiewicz/tworzeniekonta">Open</a></button>
+                <button><a href="https://github.com/MariuszMalankiewicz/tworzeniekonta">Github</a></button>
             </div>
         </div>
-        
-
-
-
-
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#800080" fill-opacity="1" d="M0,160L288,224L576,320L864,160L1152,224L1440,96L1440,0L1152,0L864,0L576,0L288,0L0,0Z"></path></svg>
     <div id="contact" class="contact">
         <h2>Contact</h2>
         <ul>
             <i class="fa-solid fa-envelope"></i>
-            <li>Email: m2ario123@wp.pl</li>
+            <li><a href="https://www.wp.pl/">Email: m2ario123@wp.pl</a></li>
         </ul>
         <ul>
             <i class="fa-solid fa-location-dot"></i>
@@ -158,7 +153,7 @@
         </ul>
         <ul>
             <i class="fa-brands fa-github"></i>
-            <li>GitHub</li>
+            <li><a href="https://github.com/MariuszMalankiewicz">Github</a></li>
         </ul>
         <ul>
             <i class="fa-brands fa-linkedin"></i>
